--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-Fractal image compressor based on three modifications of the basic algorithm
+Fractal image compressor based on three modifications of the basic algorithm.
+
+Software requirements
+
+1. Python 2.6
+2. NumPy for python 2.6
+3. PIL for python 2.6
+4. matplotlib for python 2.6
